--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               /></a>
             </div>
             <!--Right Col-->
-            <div class="pull-right">
+            <div class="pull-right pt-4">
               <!-- Main Menu -->
               <nav class="main-menu">
                 <!--Keep This Empty / Menu will come through Javascript-->
@@ -632,7 +632,7 @@ landscape in the UAE.
                     <div class="text">
                       Our family law experts handle divorce, child custody,
                       marriage contracts, and related matters with sensitivity
-                      and professionalism.
+                      and professionalism. <br>
                     </div>
                     <a
                       class="arrow flaticon-right-arrow-3"
@@ -666,11 +666,8 @@ landscape in the UAE.
       </section>
       <!-- End Practice Section -->
       
-       <!-- Welcome Section -->
-      <section
-      class="team-section"
-      style="background-image: url(images/background/pattern-1.png)"
-    >
+       <!-- Team Section -->
+      <section class="team-section" style="background-image: url(images/background/pattern-1.png)">
       <div class="auto-container">
         <div class="inner-container">
           <div class="row">
@@ -741,7 +738,7 @@ landscape in the UAE.
         </div>
       </div>
     </section>
-    <!-- End Welcome Section -->
+    <!-- End Team Section -->
 
       <!-- Main Footer -->
       <footer class="main-footer">
